# s3-backup-cpp

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  test_local.sh  test_mount.sh
include/s3backup/: backup.h  format.h  mount.h  store.h  superblock.h
include/s3check/: compare.h  fsck.h
src/backup/: backup.cpp  main.cpp  writer.cpp
src/check/: compare.cpp  fsck.cpp  main.cpp
src/mount/: datacache.cpp  dircache.cpp  fs.cpp  main.cpp
src/s3fs/: format.cpp  superblock.cpp
src/store/: local_store.cpp  s3_store.cpp  store.cpp
tests/: test_backup.cpp  test_format.cpp
